[gd_scene load_steps=4 format=2]

[ext_resource path="res://enviroment/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ScreenMatrix.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameOverRect" type="ColorRect" parent="."]
visible = false
margin_left = -5.0
margin_top = -4.0
margin_right = 1043.0
margin_bottom = 612.0
color = Color( 0.0509804, 0.0509804, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 51.0
margin_bottom = 13.0
color = Color( 0.47451, 0.478431, 0.501961, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "LIVES: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 445.254
margin_top = 265.236
margin_right = 622.254
margin_bottom = 323.236
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 458.133
margin_top = 209.0
margin_right = 631.133
margin_bottom = 263.0
text = "You Win"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
